--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
         <p>Welcome/Unknown face recognition system without GUI for seamless integration.</p>
         <a href="https://github.com/muneebinu/Face-Detection-2" target="_blank" class="project-link">View on GitHub</a>
       </div>
+       <div class="project-card" data-aos="zoom-in" data-aos-delay="300">
+        <img src="assets/webs.png" alt="digital-me" class="project-img">
+        <h3>Portfolio Website</h3>
+        <p> my personal portfolio website.</p>
+        <a href="https://github.com/muneebinu/digital-me" target="_blank" class="project-link">View on GitHub</a>
+      </div>
     </div>
   </section>
 
